# simple-ci

./: Cargo.toml  README.md  main.rs
dispatcher/: Cargo.toml
dispatcher/src/: dispatcher.rs  main.rs
observer/: Cargo.toml
observer/src/: main.rs  observer.rs
runner/: Cargo.toml
src/: dispatcher.rs  lib.rs  main.rs  observer.rs  utils.rs
tests/: integration.rs
