[package]
authors = ["Austin Tindle <tindleaj@gmail.com>"]
edition = "2018"
name = "observer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ci = {path = "../"}
clap = "2.33.1"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
